@@ -3,6 +3,9 @@
 	* debian/control,
 	src/betaradio.vala,
 	configure.ac: Add single instance support.
+	* debian/control,
+	src/betaradio.vala,
+	configure.ac: Use GApplication to replace deprecated Unique.
 
 2012-08-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
